[gd_scene load_steps=5 format=3 uid="uid://co38201ic6ve4"]

[ext_resource type="Script" path="res://scripts/heart.gd" id="1_y8ffb"]
[ext_resource type="Texture2D" uid="uid://crb5fswjernp3" path="res://assets/sprites/corazon_1.png" id="2_d1elb"]
[ext_resource type="AudioStream" uid="uid://bjq5wlr6vrwam" path="res://assets/sfx/corazones.wav" id="3_rp27s"]
[ext_resource type="PackedScene" uid="uid://vynkflwpis8o" path="res://scene_objects/particle_effect.tscn" id="4_35min"]

[node name="Heart" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_y8ffb")

[node name="Collision" type="CollisionPolygon2D" parent="."]
unique_name_in_owner = true
position = Vector2(-41, -64)
polygon = PackedVector2Array(-65, 117, 63, 205, 155, 104, 186, 24, 177, -25, 151, -61, 100, -77, 67, -68, 40, -47, 16, -67, -20, -75, -65, -63, -93, -30, -105, 26)

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, 2)
texture = ExtResource("2_d1elb")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_rp27s")
bus = &"sfx"

[node name="DespawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ClickedEffect" parent="." instance=ExtResource("4_35min")]
unique_name_in_owner = true

[node name="DestroyTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
